--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -21,6 +20,9 @@
 html{
   scroll-behavior: smooth;
 }
-body{
-  font-family: 'Space Mono', monospace;
+
+a,
+button {
+  outline: none;
+  
 }
